feat: agregar entidad PoolSueroAporte y su DTO, repositorio y mapeo
feat: actualizar PoolUpdateDTO para incluir lista de tubos

feat: agregar SueroTuboAporteInputDTO para la entrada de datos de tubos

refactor: modificar entidad Suero para incluir relación con Tubo y ajustar atributos

feat: agregar controlador y servicio para manejar operaciones de Suero

feat: agregar DTOs y mapeo para la entidad Suero

feat: implementar lógica de disponibilidad de sueros en el servicio

feat: agregar validaciones y lógica de negocio en la creación y actualización de Suero

feat: agregar entidad Tubo y su respectivo repositorio y DTO

feat: implementar lógica para manejar posiciones de tubos en la caja